# math

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.cache/clangd/index/: main.cpp.8C982D4EA599B026.idx  utils.cpp.4FFA86A72EECCF4D.idx
application/: CMakeLists.txt
application/printing_hello_world/: CMakeLists.txt
application/printing_hello_world/src/: main.cpp
include/math/: utils.hpp
module/utils/: CMakeLists.txt
module/utils/src/: utils.cpp
src/: main.cpp  utils.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  main.cpp  utils.cpp
